css updates for todoItems, fix overflow bug

--- a/src/components/Todo/TodoItem/TodoItem.module.scss
+++ b/src/components/Todo/TodoItem/TodoItem.module.scss
@@ -7,22 +7,45 @@
 
     .title {
       font-size: 16px;
+      word-break: break-word;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      line-height: 30px;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
     }
 
     .description {
       font-size: 13px;
+      word-break: break-word;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      line-height: 16px;
+      max-height: 32px;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
 
     .deadline {
+      margin-top: 8px;
       font-size: 11px;
-      color: darkgray;
 
-      &__error {
-        color: darkred;
+      &__fail {
+        color: #f53737;
       }
 
       &__success {
-        color: darkgreen;
+        color: #239a23;
+      }
+
+      &__neutral {
+        color: darkgray;
+      }
+
+      &__hurry {
+        color: darkorange;
       }
     }
   }
